--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,7 +3,8 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_STRATEGIC:   ROLE_STRATEGIC
+        ROLE_TACTICO:     ROLE_TACTICO
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
@@ -33,5 +34,5 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: ROLE_SUPER_ADMIN }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/, role: [ROLE_ADMIN,ROLE_SUPER_ADMIN ] }
+        - { path: ^/, role: ROLE_USER }
         - {path: ^/register/confirmed, role: IS_AUTHENTICATED_ANONYMOUSLY}
