actualizacion de menus

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -9,7 +9,7 @@ framework:
 
 web_profiler:
     toolbar: true
-    intercept_redirects: false
+    intercept_redirects: true
 
 twig:
     cache: false
@@ -40,5 +40,4 @@ monolog:
         #    type: chromephp
         #    level: info
 
-#swiftmailer:
-#    delivery_addresses: ['me@example.com']
+
