Cambios al reporte con la ultima base gerencial

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -100,3 +100,16 @@ doctrine_migrations:
     namespace: Application\Migrations
     table_name: migration_versions
     name: Application Migrations
+
+knp_snappy:
+    pdf:
+        enabled:    true
+        binary:     /usr/bin/wkhtmltopdf
+        options:
+                  no-outline: true
+                  page-size: LETTER
+                  encoding: UTF-8
+    image:
+        enabled:    true
+        binary:     /usr/bin/wkhtmltoimage
+
